# tauri

cli/tauri.js/: package.json
tauri/: Cargo.toml
tauri-api/: Cargo.toml
