[package]
name = "tauri"
version = "0.6.0"
authors = [
  "Lucas Fernandes Gonçalves Nogueira <lucas@tauri.studio>",
  "Daniel Thompson-Yvetot <denjell@sfosc.org>",
  "Tensor Programming <tensordeveloper@gmail.com>"
]
license = "MIT"
homepage = "https://tauri.studio"
repository = "https://github.com/tauri-apps/tauri"
description = "Make tiny, secure apps for all desktop platforms with Tauri"
edition = "2018"
exclude = [ "test/fixture/**" ]

[package.metadata.docs.rs]
features = [ "all-api" ]

[dependencies]
serde_json = "1.0"
tauri_includedir = "0.5.0"
phf = "0.8.0"
base64 = "0.12.1"
webbrowser = "0.5.4"
lazy_static = "1.4.0"
threadpool = "1.8"
anyhow = "1.0.31"
thiserror = "1.0.19"
envmnt = "0.8.2"
once_cell = "1.4.0"

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

  [dependencies.webview-sys]
  git = "https://github.com/tauri-apps/web-view"
  version = "0.5.0"

  [dependencies.web-view]
  git = "https://github.com/tauri-apps/web-view"
  version = "0.6.2"

  [dependencies.tiny_http]
  version = "0.7"
  optional = true

  [dependencies.uuid]
  version = "0.8.1"
  features = [ "v4" ]

[build-dependencies]
tauri_includedir_codegen = "0.5.2"

[dev-dependencies]
proptest = "0.10.0"
serde_json = "1.0"

  [dev-dependencies.tauri]
  path = "."
  features = [ "all-api", "edge" ]

  [dev-dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

[features]
cli = [ "tauri-api/cli" ]
edge = [ "web-view/edge" ]
embedded-server = [ "tiny_http" ]
no-server = [ ]
all-api = [ "tauri-api/notification" ]
read-text-file = [ ]
read-binary-file = [ ]
write-file = [ ]
read-dir = [ ]
copy-file = [ ]
create-dir = [ ]
remove-dir = [ ]
remove-file = [ ]
rename-file = [ ]
set-title = [ ]
execute = [ ]
open = [ ]
event = [ ]
updater = [ ]
open-dialog = [ ]
save-dialog = [ ]
notification = [ "tauri-api/notification" ]

[[example]]
name = "communication"
path = "examples/communication/src-tauri/src/main.rs"
